@@ -1,0 +1,216 @@
+20 0 0 0 1753088 60 0 1024 -128 0 255 0
+20 0 0 1 1753088 60 1 1024 127 0 255 0
+40 0 1 0 4401585 60 0 1024 -128 103 255 0
+40 0 1 1 3921367 60 1 1024 127 103 255 0
+60 0 2 0 11051332 60 0 1024 -128 105 255 0
+60 0 2 1 8771448 60 1 1024 127 114 255 0
+80 0 3 0 27747260 60 0 1024 -128 100 255 0
+80 0 3 1 19620275 60 1 1024 127 115 255 0
+100 0 4 0 69666752 60 0 1024 -128 110 255 0
+100 0 4 1 43887304 60 1 1024 127 98 255 0
+120 0 5 0 174916601 60 0 1024 -128 115 255 0
+120 0 5 1 98168623 60 1 1024 127 105 255 0
+140 1 0 0 174916601 60 0 1024 -128 116 255 0
+140 1 0 1 98168623 60 1 1024 127 108 255 0
+160 1 1 0 69666752 60 0 1024 -128 118 255 0
+160 1 1 1 43887304 60 1 1024 127 111 255 0
+180 1 2 0 27747260 60 0 1024 -128 122 255 0
+180 1 2 1 19620275 60 1 1024 127 117 255 0
+200 1 3 0 11051332 60 0 1024 -128 101 255 0
+200 1 3 1 8771448 60 1 1024 127 100 255 0
+220 1 4 0 4401585 60 0 1024 -128 127 255 0
+220 1 4 1 3921367 60 1 1024 127 102 255 0
+240 1 5 0 1753088 60 0 1024 -128 98 255 0
+240 1 5 1 1753088 60 1 1024 127 112 255 0
+260 2 0 0 1655068 60 0 1024 -128 105 255 0
+260 2 0 1 1655068 60 1 1024 127 120 255 0
+280 2 1 0 1655068 60 0 1024 -128 122 255 0
+280 2 1 1 1655068 60 1 1024 127 105 255 0
+300 2 2 0 1655068 60 0 1024 -128 108 255 0
+300 2 2 1 1655068 60 1 1024 127 122 255 0
+320 2 3 0 1655068 60 0 1024 -128 125 255 0
+320 2 3 1 1655068 60 1 1024 127 107 255 0
+340 2 4 0 1655068 60 0 1024 -128 110 255 0
+340 2 4 1 1655068 60 1 1024 127 124 255 0
+360 2 5 0 1655068 60 0 1024 -128 127 255 0
+360 2 5 1 1655068 60 1 1024 127 109 255 0
+380 3 0 0 1753088 60 0 1024 -128 112 255 0
+380 3 0 1 1753088 60 1 1024 127 127 255 0
+400 3 1 0 1753088 60 0 1024 -128 119 255 0
+400 3 1 1 1753088 60 1 1024 127 102 255 0
+420 3 2 0 1753088 60 0 1024 -128 127 255 0
+420 3 2 1 1753088 60 1 1024 127 109 255 0
+440 3 3 0 1753088 60 0 1024 -128 102 255 0
+440 3 3 1 1753088 60 1 1024 127 116 255 0
+460 3 4 0 1753088 60 0 1024 -128 109 255 0
+460 3 4 1 1753088 60 1 1024 127 124 255 0
+480 3 5 0 1753088 60 0 1024 -128 117 255 0
+480 3 5 1 1753088 60 1 1024 127 99 255 0
+500 4 0 0 1753088 60 0 1024 -128 124 255 0
+500 4 0 1 1753088 60 1 1024 127 106 255 0
+520 4 1 0 1753088 60 0 784 -128 99 255 0
+520 4 1 1 1753088 60 1 784 127 113 255 0
+540 4 2 0 1753088 60 0 544 -128 106 255 0
+540 4 2 1 1753088 60 1 544 127 121 255 0
+560 4 3 0 1753088 60 0 304 -128 114 255 0
+560 4 3 1 1753088 60 1 304 127 96 255 0
+580 4 4 0 1753088 60 0 64 -128 121 255 0
+580 4 4 1 1753088 60 1 64 127 103 255 0
+600 4 5 0 1753088 60 0 0 -128 96 255 0
+600 4 5 1 1753088 60 1 0 127 111 255 0
+620 5 0 0 1753088 60 0 0 -128 103 255 0
+620 5 0 1 1753088 60 1 0 127 118 255 0
+640 5 1 0 1753088 60 0 16 -128 111 255 0
+640 5 1 1 1753088 60 1 16 127 125 255 0
+660 5 2 0 1753088 60 0 32 -128 118 255 0
+660 5 2 1 1753088 60 1 32 127 100 255 0
+680 5 3 0 1753088 60 0 48 -128 125 255 0
+680 5 3 1 1753088 60 1 48 127 108 255 0
+700 5 4 0 1753088 60 0 64 -128 100 255 0
+700 5 4 1 1753088 60 1 64 127 115 255 0
+720 5 5 0 1753088 60 0 80 -128 108 255 0
+720 5 5 1 1753088 60 1 80 127 122 255 0
+740 6 0 0 1753088 60 0 80 -128 115 255 0
+740 6 0 1 1753088 60 1 80 127 97 255 0
+760 6 1 0 1753088 60 0 240 -128 122 255 0
+760 6 1 1 1753088 60 1 240 127 105 255 0
+780 6 2 0 1753088 60 0 400 -128 97 255 0
+780 6 2 1 1753088 60 1 400 127 112 255 0
+800 6 3 0 1753088 60 0 560 -128 105 255 0
+800 6 3 1 1753088 60 1 560 127 119 255 0
+820 6 4 0 1753088 60 0 720 -128 112 255 0
+820 6 4 1 1753088 60 1 720 127 126 255 0
+840 6 5 0 1753088 60 0 880 -128 119 255 0
+840 6 5 1 1753088 60 1 880 127 102 255 0
+860 7 0 0 1753088 60 0 880 -128 126 255 0
+860 7 0 1 1753088 60 1 880 127 109 255 0
+880 7 1 0 1753088 60 0 880 -128 102 255 0
+880 7 1 1 1753088 60 1 880 127 116 255 0
+900 7 2 0 1753088 60 0 880 -128 109 255 0
+900 7 2 1 1753088 60 1 880 127 123 255 0
+920 7 3 0 1753088 60 0 880 -128 116 255 0
+920 7 3 1 1753088 60 1 880 127 99 255 0
+940 7 4 0 1753088 60 0 880 -128 124 255 0
+940 7 4 1 1753088 60 1 880 127 106 255 0
+960 7 5 0 1753088 60 0 880 -128 99 255 0
+960 7 5 1 1753088 60 1 880 127 113 255 0
+980 8 0 0 1753088 60 0 880 -128 106 255 0
+980 8 0 1 1753088 60 1 880 127 120 255 0
+1000 8 1 0 1753088 60 0 720 -128 113 255 0
+1000 8 1 1 1753088 60 1 720 127 96 255 0
+1020 8 2 0 1753088 60 0 560 -128 121 255 0
+1020 8 2 1 1753088 60 1 560 127 103 255 0
+1040 8 3 0 1753088 60 0 400 -128 96 255 0
+1040 8 3 1 1753088 60 1 400 127 110 255 0
+1060 8 4 0 1753088 60 0 240 -128 103 255 0
+1060 8 4 1 1753088 60 1 240 127 117 255 0
+1080 8 5 0 1753088 60 0 80 -128 110 255 0
+1080 8 5 1 1753088 60 1 80 127 125 255 0
+1100 9 0 0 1753088 60 0 80 -128 118 255 0
+1100 9 0 1 1753088 60 1 80 127 100 255 0
+1120 9 1 0 1753088 60 0 64 -128 125 255 0
+1120 9 1 1 1753088 60 1 64 127 107 255 0
+1140 9 2 0 1753088 60 0 48 -128 100 255 0
+1140 9 2 1 1753088 60 1 48 127 115 255 0
+1160 9 3 0 1753088 60 0 32 -128 107 255 0
+1160 9 3 1 1753088 60 1 32 127 122 255 0
+1180 9 4 0 1753088 60 0 16 -128 115 255 0
+1180 9 4 1 1753088 60 1 16 127 97 255 0
+1200 9 5 0 1753088 60 0 0 -128 122 255 0
+1200 9 5 1 1753088 60 1 0 127 104 255 0
+1220 10 0 0 1856913 60 0 1024 -128 97 255 0
+1220 10 0 1 1856913 60 1 1024 127 112 255 0
+1240 10 1 0 1856913 60 0 1024 -128 127 255 0
+1240 10 1 1 1856913 60 1 1024 127 109 255 0
+1260 10 2 0 1856913 60 0 1024 -128 125 255 0
+1260 10 2 1 1856913 60 1 1024 127 107 255 0
+1280 10 3 0 1856913 60 0 1024 -128 123 255 0
+1280 10 3 1 1856913 60 1 1024 127 105 255 0
+1300 10 4 0 1856913 60 0 1024 -128 121 255 0
+1300 10 4 1 1856913 60 1 1024 127 103 255 0
+1320 10 5 0 1856913 60 0 1024 -128 119 255 0
+1320 10 5 1 1856913 60 1 1024 127 101 255 0
+1340 11 0 0 1856913 60 0 1024 -128 117 255 0
+1340 11 0 1 1856913 60 1 1024 127 99 255 0
+1360 11 1 0 1856913 60 0 1024 -128 114 255 0
+1360 11 1 1 1856913 60 1 1024 127 97 255 0
+1380 11 2 0 1856913 60 0 1024 -128 112 255 0
+1380 11 2 1 1856913 60 1 1024 127 127 255 0
+1400 11 3 0 1856913 60 0 1024 -128 110 255 0
+1400 11 3 1 1856913 60 1 1024 127 125 255 0
+1420 11 4 0 1856913 60 0 1024 -128 108 255 0
+1420 11 4 1 1856913 60 1 1024 127 123 255 0
+1440 11 5 0 1856913 60 0 1024 -128 106 255 0
+1440 11 5 1 1856913 60 1 1024 127 121 255 0
+1460 12 0 0 1856913 60 0 0 -128 104 255 0
+1460 12 0 1 1856913 60 1 0 127 118 255 0
+1480 12 1 0 1856913 60 0 0 -128 102 255 0
+1480 12 1 1 1856913 60 1 0 127 116 255 0
+1500 12 2 0 1856913 60 0 0 -128 100 255 0
+1500 12 2 1 1856913 60 1 0 127 114 255 0
+1520 12 3 0 1856913 60 0 0 -128 98 255 0
+1520 12 3 1 1856913 60 1 0 127 112 255 0
+1540 12 4 0 1856913 60 0 0 -128 96 255 0
+1540 12 4 1 1856913 60 1 0 127 110 255 0
+1560 12 5 0 1856913 60 0 0 -128 126 255 0
+1560 12 5 1 1856913 60 1 0 127 108 255 0
+1580 13 0 0 1856913 60 0 0 -128 123 255 0
+1580 13 0 1 1856913 60 1 0 127 106 255 0
+1600 13 1 0 1856913 60 0 0 -128 121 255 0
+1600 13 1 1 1856913 60 1 0 127 104 255 0
+1620 13 2 0 1856913 60 0 0 -128 119 255 0
+1620 13 2 1 1856913 60 1 0 127 102 255 0
+1640 13 3 0 1856913 60 0 0 -128 117 255 0
+1640 13 3 1 1856913 60 1 0 127 100 255 0
+1660 13 4 0 1856913 60 0 0 -128 115 255 0
+1660 13 4 1 1856913 60 1 0 127 98 255 0
+1680 13 5 0 1856913 60 0 0 -128 113 255 0
+1680 13 5 1 1856913 60 1 0 127 127 255 0
+1700 14 0 0 1753088 60 0 896 -128 0 255 0
+1700 14 0 1 1753088 60 1 1024 127 0 255 0
+1720 14 1 0 1753088 60 0 896 -128 103 255 0
+1720 14 1 1 1753088 60 1 1024 127 103 255 0
+1740 14 2 0 1753088 60 0 896 -128 110 255 0
+1740 14 2 1 1753088 60 1 1024 127 110 255 0
+1760 14 3 0 1753088 60 0 896 -128 117 255 0
+1760 14 3 1 1753088 60 1 1024 127 117 255 0
+1780 14 4 0 1753088 60 0 896 -128 125 255 0
+1780 14 4 1 1753088 60 1 1024 127 125 255 0
+1800 14 5 0 1753088 60 0 896 -128 100 255 0
+1800 14 5 1 1753088 60 1 1024 127 100 255 0
+1820 15 0 0 1753088 60 0 1024 -128 0 255 0
+1820 15 0 1 1753088 60 1 1024 127 0 255 0
+1840 15 1 0 1753088 60 0 1024 -128 0 255 0
+1840 15 1 1 1753088 60 1 1024 127 0 255 0
+1860 15 2 0 1753088 60 0 1024 -128 0 255 0
+1860 15 2 1 1753088 60 1 1024 127 0 255 0
+1880 15 3 0 1753088 60 0 1024 -128 0 255 0
+1880 15 3 1 1753088 60 1 1024 127 0 255 0
+1900 15 4 0 1753088 60 0 1024 -128 0 255 0
+1900 15 4 1 1753088 60 1 1024 127 0 255 0
+1920 15 5 0 1753088 60 0 1024 -128 0 255 0
+1920 15 5 1 1753088 60 1 1024 127 0 255 0
+1940 16 0 0 1753088 60 0 1008 -128 0 255 0
+1940 16 0 1 1753088 60 1 1024 127 0 255 0
+1960 16 1 0 1753088 60 0 1008 -128 103 255 0
+1960 16 1 1 1753088 60 1 1024 127 103 255 0
+1980 16 2 0 1753088 60 0 1008 -128 110 255 0
+1980 16 2 1 1753088 60 1 1024 127 110 255 0
+2000 16 3 0 1753088 60 0 1008 -128 117 255 0
+2000 16 3 1 1753088 60 1 1024 127 117 255 0
+2020 16 4 0 1753088 60 0 1008 -128 125 255 0
+2020 16 4 1 1753088 60 1 1024 127 125 255 0
+2040 16 5 0 1753088 60 0 1008 -128 100 255 0
+2040 16 5 1 1753088 60 1 1024 127 100 255 0
+2060 17 0 0 1753088 60 0 0 -128 107 255 0
+2060 17 0 1 1753088 60 1 0 127 107 255 0
+2080 17 1 0 1753088 60 0 0 -128 114 255 0
+2080 17 1 1 1753088 60 1 0 127 114 255 0
+2100 17 2 0 1753088 60 0 0 -128 122 255 0
+2100 17 2 1 1753088 60 1 0 127 122 255 0
+2120 17 3 0 1753088 60 0 0 -128 97 255 0
+2120 17 3 1 1753088 60 1 0 127 97 255 0
+2140 17 4 0 1753088 60 0 0 -128 104 255 0
+2140 17 4 1 1753088 60 1 0 127 104 255 0
+2160 17 5 0 1753088 60 0 0 -128 111 255 0
+2160 17 5 1 1753088 60 1 0 127 111 255 0
